--- a/Scan-HTML/package.json
+++ b/Scan-HTML/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "puppeteer": "^21.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
