--- a/Scan-HTML/package.json
+++ b/Scan-HTML/package.json
@@ -10,11 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "cheerio": "^1.0.0-rc.12",
-    "puppeteer": "^21.3.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
